NBNP-204 Fix Sort Page Filter: wrong index type

--- a/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
@@ -59,7 +59,7 @@ field_settings:
     label: 'Page Sort Filter'
     datasource_id: 'entity:digital_serial_page'
     property_path: page_sort
-    type: string
+    type: integer
     dependencies:
       module:
         - digital_serial_page
