--- a/config-yml/facets.facet.publication_decade.yml
+++ b/config-yml/facets.facet.publication_decade.yml
@@ -18,7 +18,7 @@ facet_source_id: 'search_api:views_page__digital_page_lister__page_issues'
 widget:
   type: checkbox
   config:
-    show_numbers: false
+    show_numbers: true
     soft_limit: 10
     soft_limit_settings:
       show_less_label: 'Show less'
