--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -2042,12 +2042,7 @@ display:
             multi_type: separator
             multi_separator: ', '
           plugin_id: search_api_field
-      header:
-        area:
-          id: area
-          table: views
-          field: area
-          plugin_id: text
+      header: {  }
       empty:
         area:
           id: area
