--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1800,7 +1800,7 @@ display:
             automatically_load_content: false
       cache:
         type: none
-      title: Issues
+      title: 'Digital Issues'
       relationships: {  }
       sorts:
         issue_date:
