--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -32,7 +32,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'administer views'
+          perm: 'access content'
       cache:
         type: tag
         options: {  }
