NBNP-256 Add wildcard to View>Issues page>Path URL

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1125,7 +1125,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: serials/browse
+      path: serials/browse/%
       exposed_block: false
       display_description: ''
       use_ajax: true
