NBNP-255 Add edition field to Issues view, add meta class

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1540,7 +1540,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: 'Volume {{ parent_issue_volume_1 }}'
+            text: '<small>Volume {{ parent_issue_volume_1 }}</small>'
             make_link: false
             path: ''
             absolute: false
@@ -1590,10 +1590,63 @@ display:
           group_type: group
           admin_label: ''
           label: ''
+          exclude: true
+          alter:
+            alter_text: true
+            text: '<small>No. {{ parent_issue_issue_1 }}</small>'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          link_to_item: false
+          use_highlighting: false
+          multi_type: separator
+          multi_separator: ', '
+          plugin_id: search_api
+        issue_edition:
+          id: issue_edition
+          table: search_api_index_pages_newspapers_lib_unb_ca
+          field: issue_edition
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
           exclude: false
           alter:
             alter_text: true
-            text: '{{ parent_issue_volume_1 }} Issue {{ parent_issue_issue_1 }}'
+            text: '{{ parent_issue_volume_1 }}{{ parent_issue_issue_1 }}<small>Ed. {{ issue_edition__value }}</small>'
             make_link: false
             path: ''
             absolute: false
@@ -1619,22 +1672,39 @@ display:
             preserve_tags: ''
             html: false
           element_type: div
-          element_class: text-center
+          element_class: 'text-center issue-meta'
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: '0'
           element_wrapper_class: ''
           element_default_classes: false
-          empty: ''
+          empty: '{{ parent_issue_volume_1 }}{{ parent_issue_issue_1 }}'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          link_to_item: false
-          use_highlighting: false
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
           multi_type: separator
-          multi_separator: ', '
-          plugin_id: search_api
+          separator: ', '
+          field_api_classes: false
+          field_rendering: true
+          fallback_handler: search_api
+          fallback_options:
+            link_to_item: false
+            use_highlighting: false
+            multi_type: separator
+            multi_separator: ', '
+          plugin_id: search_api_field
         issue_date_1:
           id: issue_date_1
           table: search_api_index_pages_newspapers_lib_unb_ca
