--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -985,7 +985,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<figure class=\"text-center\">\n{{ page_image }}\n<figcaption>\n<i class=\"glyphicon glyphicon-zoom-in\"></i>Zoomable high-resolution image of page {{ page_no }}\n</figcaption>\n</figure>"
+            text: "<figure class=\"text-center\">\r\n{{ page_image }}\r\n<figcaption>\r\n<i class=\"glyphicon glyphicon-zoom-in\"></i>High-resolution image - page {{ page_no }}\r\n</figcaption>\r\n</figure>"
             make_link: true
             path: '/serials/{{ parent_digital_title_id }}/issues/{{ parent_digital_issue_id }}/pages/{{ parent_digital_page_id }}'
             absolute: false
