--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -590,6 +590,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_additional_indexed_text: true
+  field_featured: true
   field_first_issue_search_date: true
   field_first_issue_sort_date: true
   field_last_issue_search_date: true
