--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -57,6 +57,7 @@ hidden:
   field_description: true
   field_editor: true
   field_family: true
+  field_featured: true
   field_first_issue: true
   field_first_issue_approx_date: true
   field_first_issue_date: true
