NBNP-258 Add missing Featured config

--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.publication.field_description
     - field.field.node.publication.field_editor
     - field.field.node.publication.field_family
+    - field.field.node.publication.field_featured
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_type
@@ -120,12 +121,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 21
+    weight: 22
     region: content
     settings: {  }
     third_party_settings: {  }
   field_credit:
-    weight: 19
+    weight: 20
     settings:
       rows: 2
       placeholder: ''
@@ -179,6 +180,13 @@ content:
           bundle: publication
     type: entity_reference_autocomplete
     region: content
+  field_featured:
+    type: boolean_checkbox
+    weight: 19
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_first_issue_approx_date:
     weight: 39
     settings:
@@ -546,7 +554,7 @@ content:
     region: content
   path:
     type: path
-    weight: 24
+    weight: 25
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -554,21 +562,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 22
+    weight: 23
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 25
+    weight: 26
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 23
+    weight: 24
     region: content
     third_party_settings: {  }
   title:
@@ -581,7 +589,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 20
+    weight: 21
     settings:
       match_operator: CONTAINS
       size: 60
@@ -590,7 +598,6 @@ content:
     third_party_settings: {  }
 hidden:
   field_additional_indexed_text: true
-  field_featured: true
   field_first_issue_search_date: true
   field_first_issue_sort_date: true
   field_last_issue_search_date: true
