NBNP-261 Add ajax throbber script to subtheme library

--- a/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.libraries.yml
+++ b/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.libraries.yml
@@ -2,3 +2,9 @@ newspapers_styles:
   css:
     theme:
       dist/css/style.css: {}
+
+views_infinite_scroll_fix:
+  js:
+    dist/js/newspapers_core.digital_lister.js: {}
+  dependencies:
+    - core/jquery
